# OpticalMirroredSafe

./: .gitignore  CMakeLists.txt  README.md  launch.txt
include/OpticalMirroredSafe/: OpticalBeam.h  OpticalSafe.h  Pose.h
src/: OpticalBeam.cpp  OpticalSafe.cpp  input.txt  main.cpp
